- extended FlowStream by adding the ability to execute Total.js actions
- added a new global event `ON('flowstream', function(instance) {`
- added new action methods `$.progress(percentage)` and `ACTION().progress(console.log)` to measure percentage
- fixed Total error handling
- improved compiling navigation in the CMS compiler
- fixed filling of the `template` property in the CMS compiler

========================
0.0.15
========================

- fixed nested objects in JSON schemas
- improved `keepalive` option in the `REQUEST()` method (it can contain HttpAgent or options for it)
- updated `RESTBuilder.keepalive()` method by adding `val` argument
- fixed column indexer in the CSV parser
- fixed proxy timeout
- fixed string slug method
- fixed an issue with generating file names when merging files directly in the view engine
- fixed handling of case-sensitive file names
- fixed unexpected errors with the stream when handling static files
- added support for `.webmanifest` file extension
- fixed sending mail attachments
- fixed creating an empty object according to the nested JSON schema
- added a new JSON Schema type `DataURI2` that keeps a value as text
- fixed handling unexpected errors in the FlowStream
- improved error handling in the Flow engine
- fixed network connection problems in remote editing
- fixed throwing of timeout error in WebSocketClient

========================
0.0.14
========================

- fixed loading plugin files (only `.js` files will load)
- removed loading of `.DS_STORE` files in plugins
- added watcher for `extensions/*.html` files
- __breaking change__: the audit logs object has been changed:
	- `username` renamed to `createdby`
	- `schema` renamed to `action`
- disabled auto-cleaning files in FlowStream workers
- improved loading static files in release mode
- added support for `HEAD` method
- fixed file routing
- added support for handling specific file extensions in the form `ROUTE('FILE *.php', ...)`